2009-07-25  smeghead  <smeghead@smeghead-laptop>

    * 1.3.01リリース

2009-07-25  smeghead  <smeghead@smeghead-laptop>

    * 英語のリソースの翻訳を追加。
    * タイポの修正。
    * 中国語のリソースを追加した。qiuさんに翻訳してもらいました。ありがとうご
    ざいます。

2009-07-24  smeghead <smeghead@users.sourceforge.jp>

    * ライセンスをGPLに変更する準備
    * トップの検索結果の表示用CSSの変更。

2009-07-22  smeghead <smeghead@users.sourceforge.jp>

    * javascriptのリソースを国際化した。

2009-07-18  smeghead <smeghead@users.sourceforge.jp>

    * 中国語のリソースを修正した。

2009-07-18  smeghead <smeghead@users.sourceforge.jp>

    * FreeBSD(さくらインターネット)でsetlocaleが機能しなかったため、setenvにて環境変数を更新するように修正した。

2009-07-17  smeghead <smeghead@users.sourceforge.jp>

    * Makefileで、FreeBSDの場合、LFLAGSに-lintlを追加するように修正した。

2009-07-16  smeghead  <smeghead@smeghead-laptop>

    * 1.2.10-bataリリース

2009-07-16  smeghead <smeghead@users.sourceforge.jp>

    * 検索条件に更新日時の日数指定を追加した。

2009-07-15  smeghead <smeghead@users.sourceforge.jp>

    * トップのスタイルシートの調整をした。
    * 国際化の対応のためlocaleディレクトリの考慮をMakefileに追加した。
    * 日本語メッセージの修正
    * サブプロジェクト用のプロジェクト設定でlocaleを更新しようとしていた不具合
    を修正。サブプロジェクトにはlocaleレコードは無いため。

2009-07-14  smeghead <smeghead@users.sourceforge.jp>

    * 検索結果のRSSダウンロードを実装した。

2009-07-11  smeghead <smeghead@users.sourceforge.jp>

    * 複数サブプロジェクトの検索処理の実装中
    * 変数名g_project_name,g_project_name_4_urlをg_project_code,g_project_code_4_urlに変更した。
    padding:0px 10px;
    * メモリリークを探す時のためのオプションMEMORYDEBUGを追加した。
    * プロジェクト用のdbのsettingテーブルにロケール用のレコードを追加した。
      $ su
      # echo "insert into setting(name, value) values ('locale', 'ja_JP');" | sqlite3 1.db

2009-07-10  smeghead <smeghead@users.sourceforge.jp>

    * 複数サブプロジェクトの検索処理の実装中

2009-07-09  smeghead <smeghead@users.sourceforge.jp>

    * 複数サブプロジェクトの検索処理の実装中

2009-07-05  smeghead <smeghead@users.sourceforge.jp>

    * 国際化対応中

2009-07-02  smeghead <smeghead@users.sourceforge.jp>

    * 国際化対応を開始した。

2009-06-29  smeghead <smeghead@users.sourceforge.jp>

    * サブプロジェクトの横断検索処理作成。

2009-06-28  smeghead <smeghead@users.sourceforge.jp>
