@@ -1,3 +1,8 @@
+2009-08-06  smeghead  <smeghead@smeghead-laptop>
+
+	* mattnさんから、Windowsポーティングパッチを頂きました。ありがとうございま
+    す。
+
 2009-07-25  smeghead  <smeghead@smeghead-laptop>
 
     * 1.3.01リリース
